# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/src/: .coverage  index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py  test_statistics_service.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
